--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.16.1",
     "axios": "^0.21.1",
     "connected-react-router": "^6.9.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
